[package]
name = "rust-rest-appi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "1.0.142",features = ["derive"]}
dotenv = "0.15.0"
config ="0.13.2"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
derive_more = "0.99.17"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"